--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A web application that uses Twilio API",
   "main": "index.js",
   "scripts": {
+    "start": "node server",
+    "start-dev": "webpack & nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +19,20 @@
   },
   "homepage": "https://github.com/dorcheng/textDoris#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "twilio": "^3.15.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "nodemon": "^1.17.3",
+    "webpack": "^4.6.0"
   }
 }
