--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server",
-    "start-dev": "webpack & nodemon server",
+    "start-dev": "webpack && nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,9 +21,12 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "graphql": "^0.13.2",
     "morgan": "^1.9.0",
+    "pg": "^7.4.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "sequelize": "^4.37.6",
     "twilio": "^3.15.1"
   },
   "devDependencies": {
@@ -33,6 +36,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "nodemon": "^1.17.3",
-    "webpack": "^4.6.0"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15"
   }
 }
