--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A web application that uses Twilio API",
   "main": "index.js",
   "scripts": {
-    "deploy": "git checkout -b deploy && webpack -p && git add -f public/bundle.js public/bundle.js.map && git commit --allow-empty -m 'Deploying' && git push --force heroku deploy:master",
+    "deploy": "git checkout -b deploy && webpack && git add -f public/bundle.js public/bundle.js.map && git commit -m 'Deploying' && git push heroku deploy:master",
     "start": "node server",
-    "start-dev": "webpack -w && nodemon server",
+    "start-dev": "webpack && nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
